--- a/templates/admin/competitors.html
+++ b/templates/admin/competitors.html
@@ -58,9 +58,9 @@
             <td>
                 <strong>{{ c.first_name | competitor_display(c.callsign) }}</strong>
                 {% if c.is_referee and c.assigned_sports %}
-                <br><small style="color: #805ad5;">
-                    Referees: {% for s in c.assigned_sports %}{{ s.name }}{% if not loop.last %}, {% endif %}{% endfor %}
-                </small>
+                {% for s in c.assigned_sports %}
+                <br><small style="color: #805ad5;">📋 {{ s.name }}</small>
+                {% endfor %}
                 {% endif %}
             </td>
             <td>
